refactor: 15-round code review — N+1, memory leaks, SQL injection, validation, error handling
Critical:
- ClientFlagService.recordMetrics: N+1 → batch findByProjectIdAndKeys
- SegmentService: batch save context entries
- ApiKeyAssembler: mask keys in list/get, full key only on create
- QuotaValidator: null safety check
- AuditEventRepository: parameterized SQL for deleteOlderThan
- PasswordResetService: @Value with default

Memory:
- PasswordResetService: ConcurrentHashMap → Caffeine cache with expireAfterWrite+maxSize
- RateLimitFilter: add maximumSize(10_000) on Caffeine cache

Performance:
- FeatureFlagEvaluator: new per request → static final field
- RateLimitFilter: separate api-write rate limit config
- FlagAssembler: extract shared loadTagMap() helper

SQL quality:
- IntegrationRepository: SELECT* → explicit columns
- AuditEventRepository: SELECT* → explicit columns
- FlagRepository: SELECT* in subquery → explicit columns

Validation:
- @Valid on 6 unauthenticated endpoints
- EnvironmentController: Map<String,String> → requireName() helper
- EnvironmentService.create: name validation
- AuthController: locale-aware forgot-password messages
- ClientFlagController: 200→202 Accepted for metrics

Error handling:
- CustomWebhookService: catch(Exception)→catch(IOException)
- IntegrationEventListener: catch(Exception)→catch(IOException)
- FlagConstraintParser: catch(Exception)→catch(IOException)
- FeatureFlagEvaluator: catch(Exception)→catch(DateTimeParseException)
- HashUtils: RuntimeException→IllegalStateException
- EmailTemplateService: RuntimeException→BadRequestException
- UserService.uploadAvatar: RuntimeException→BadRequestException

Architecture:
- SegmentService: return Segment entity, not SegmentResponse
- SegmentAssembler: new assembler class
- FlagController: /flags?environmentId → /flags/by-environment
- FlagController.getAllEnriched: 9 positional args → builder pattern
- PaginatedDashboardResponse: add Builder
- HttpUtils: shared getClientIp() for Audit